css/main.css
*,
*::before
*::after {
    box-sizing: border-box;
}

:root {
    --grid: 1fr;
}

@font-face {
    font-family: 'SamsungSansRegular';
    src: url(/fonts/samsungsharpsans.otf) format('opentype');
    font-weight: normal;
}

@font-face {
    font-family: 'SamsungSansMedium';
    src: url(/fonts/samsungsharpsans-medium.otf) format('opentype');
    font-weight: medium;
}

@font-face {
    font-family: 'SamsungSansBold';
    src: url(/fonts/samsungsharpsans-bold.otf) format('opentype');
    font-weight: bold;
}

body {
    margin: 0;
    padding: 0;
    width: 100vw;
}

/* NAVBAR */
#navbar {
    width: 100%;
    background: rgba(40, 38, 38, 0.50);
    backdrop-filter: blur(15px);
    -webkit-backdrop-filter: blur(15px);
    /* flex-shrink: 0; */
    position: fixed;
    padding: 1em 0;
    text-align: center;
    z-index: 999;
}

.nav_bar {
    margin: 0;
    padding: 0;
}


.nav_list {
    margin: 0 2.5em;
    margin-top: 1em;
    padding: 0;

    font-family: 'SamsungSansRegular';
    list-style: none;
    font-size: 10px;
    text-transform: uppercase;
    letter-spacing: 1px;

    display: flex;
    justify-content: space-between;
}

.nav_link {
    text-decoration: none;
    color: white;
}
.social-media-links{
    list-style: none;
    display: flex;
    justify-content: space-between;
    margin-right: auto;
    display: inline-flexbox;
}
/* NAVBAR */

/* BUTTONS */
.btn-primary {
    text-decoration: none;
    color: white;
    font-family: 'SamsungSansBold';
    font-size: 13px;
    text-align: center;
    line-height: 20px;
    cursor: pointer;
    display: inline-block;
    width: 60px;
    height: 20px;
    background-color: black;
    border-radius: 82.5px;
    margin-bottom: 10px;
    margin-right: 10px;
    padding: .5em 1.5em;
}

.btn-secondary {
    text-decoration: none;
    color: white;
    font-family: 'SamsungSansBold';
    font-size: 13px;
    text-align: center;
    line-height: 20px;
    cursor: pointer;
    padding: .5em 1.5em;
    display: inline-block;

    width: 86px;
    height: 20px;
    background-color: #525051;
    border-radius: 82.5px;
    margin-bottom: 10px;
}
/* BUTTONS */

/* HERO */
#hero {
    /* padding: 0 0; */
    padding: 6.4em 0 0 0;
    width: 100vw;
    
}
.featured-tv {
    width: 100%;
    overflow: hidden;
}
.featured-tv>img {
    width: 100%;
    object-fit: cover;
    scale: 1.25;
    transform: translate(0, -2.5%);
}
/* HERO */

/* INRODUCTION */
#introduction {
    width: 100vw;
}
#introduction > div {
    margin: 2em;
    text-align: center;
}

.primary-text {
    margin-top: 0;
    font-family: 'SamsungSansBold';
    font-size: 30px;
    text-align: center;
}

.secondary-text {
    font-family: 'SamsungSansBold';
    padding-top: 30px;
    font-size: 20px;
}

.flex-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.featured-tv-2 {
    width: 90%;
    background:#E1E1E1;
    border-radius: 35px;
    margin-right: 10px;
    margin-bottom: 30px;
}

.featured-tv-3 {
    width: 90%;
    background:#E1E1E1;
    border-radius: 35px;
    margin-right: 10px;
}

.featured-tv-2 > img {
    width: 100%;
    border-top-left-radius: 35px;
    border-top-right-radius: 35px;
}

.featured-tv-3 > img {
    width: 100%;
    border-top-left-radius: 35px;
    border-top-right-radius: 35px;

}

.model-name {
    font-family: 'SamsungSansBold';
    font-size: 25px;
    margin-top: 5px;
    margin-bottom: 2px;
}

.tagline {
    font-family: 'SamsungSansRegular';
    font-weight: normal;
    font-size: 13px;
    padding-bottom: 0px;
    margin-top: 0;
    padding-top: 0;
}

/* INRODUCTION */

/* FOOTER */
#footer {
    /* width: 100vw; */
    background: rgba(40, 38, 38, 0.50);
    backdrop-filter: blur(15px);
    -webkit-backdrop-filter: blur(15px);
    padding: 20px;
    display: flex;
    align-items: center;
}

.footer-logo img {
    height: 40px;
    width: auto;
    margin-left: 0.5em;
}

.footer-text p {
    font-size: 14px;
    font-family: 'SamsungSansRegular';
    font-weight: normal;
    color: white;
    margin-left: 0.8em;
    margin-right: auto;
}

.social-media-icons {
    display: flex;
    align-items: center;
    margin-left: auto;
    margin-right: 0.5em;
   
}

.social-media-icons a {
    margin-right: 10px;
}

.social-media-icons img {
    height: 30px;
    width: auto;
}

/* FOOTER */

/* media queries */
/* desktop css */
@media (min-width: 780px) {
    .btn-primary {
        font-size:13px;
        line-height: 30px;
        padding: .5em 1.5em; 
        display: inline-block;
    
        width: 90px;
        height: 30px;
        background-color: black;
        border-radius: 82.5px;
        margin-bottom: 10px;
    }
    
    .btn-secondary {
        font-size: 13px;
        line-height: 30px;
        width: 105px;
        height: 30px;
        margin-bottom: 15px;
    }
    /* NAVIGATION */
    .nav_bar {
        display: flex;
        align-items: center;
    }

    #navbar {
        padding: 1em 2.5em;
    }

    .logo {
        margin-left: 1.5em;
        margin-right: 60px;
    } 

    nav ul li a {
        display: block;
        padding: 10px 25px;
    }

    .nav_list {
        font-size: 15px;
        margin-top: 0em;
    }

    /* NAVIGATION */

    /* INTRODUCTION */
    #hero {
        padding: 0;
        margin: 0;
    }
    #introduction > div {
        margin: 0;
    }
    .featured-tv>img {
        scale: 1;
        transform: translate(0,-5.5%);
        margin: 0;
        padding: 0;
    }
    .featured-tv {
        margin: 0;
        padding: 0;
    }
    .primary-text {
        margin-top: 0;
        margin-bottom: 10px;
        font-size: 45px;
        text-align: center;
    }
    
    .secondary-text {
        padding-top: 30px;
        font-size: 35px;
    }

    .flex-container {
        display: flex;
        flex-direction: row;
        justify-content: center;
        align-items: center;
        width: auto;
        padding: 10px 50px;
    } 

    .featured-tv-2 {
        margin-right: 50px;
        width: 600px;
    }
    
    .featured-tv-3 {
        width: 600px;
        margin-bottom: 30px;
    }

    .model-name {
        font-size: 35px;
        margin-top: 5px;
        margin-bottom: 2px;
    }
    
    .tagline {
        font-size: 18px;
        padding-bottom: 0px;
        margin-top: 0;
        padding-top: 0;
    }
    
    /* .featured-tv-2 > img {
        width: 100%;
    } */
    
    .featured-tv-3 > img {
        width: 100%;
        scale: 1;
    } 
    /* INTRODUCTION */

    /* FOOTER */
    .footer-text p {
        margin-left: 1.5em;
    }
    /* FOOTER */
}

